[tool.poetry]
name = "fistro"
version = "0.2.0"
description = "A fixture generator based on type annotations."
readme = "README.rst"
authors = ["Pablo Cabezas <pabcabsal@gmail.com>"]
repository = "https://github.com/kingoodie/fistro"
homepage = "https://github.com/kingoodie/fistro"
license = "MIT"
keywords = ["fixture", "testing", "tool", "dataclasses", "annotations"]

[tool.poetry.dependencies]
python = "3.7.*"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
pydantic = "^0.11.2"
pytest-cov = "^2.5"
pytest-mypy = "^0.3.2"
coverage = "^4.5"
